[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "tools"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
util = { path = "../util" }
